--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -10,7 +10,7 @@
         <span class="indexBtn signoutBtn"><%= link_to 'SIGN OUT' ,destroy_user_session_path %></span>
       <% else %>
         <span class="indexBtn signinBtn"><%= link_to 'SIGN IN' ,new_user_session_path %></span>
-        <span class="indexBtn "><%= link_to 'TRY FOR FREE',login_pages_path %></span>
+        <span class="indexBtn "><%= link_to 'GET STRATED',login_pages_path %></span>
       <% end %>
     </div>
   </nav>
@@ -23,7 +23,7 @@
         <h3 class="text-6_2xl font-bold leading-tight">SlaDock is where magic happens</h2>
         <p class="text-lg mt-4 mb-8 light_gray">With channels in SlaDock, you and your team can work effectively.</p>
         <div class="btn-group mb-4">
-          <button class="px-10 py-4 bg-sladock text-white rounded"><%= link_to 'TRY FOR FREE' ,workspaces_path %></button>
+          <button class="px-10 py-4 bg-sladock text-white rounded"><%= link_to 'GET STRATED' ,workspaces_path %></button>
         </div>
       </div>
     </div>
