--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="bg-sladock text-white overflow-y-auto min-w-200 h-left_full" style="width: 300px" data-controller="notification" data-notification-workspace="<%= workspace.id %>" data-notification-user="<%= current_user.nickname %>" data-notification-channel="<%= channel&.id || "" %>">
     <div class="left-bar">
-      <%= link_to workspace_draft_path(@workspace),class:"truncate pl-10 pt-2 pb-1 w-full block hover:bg-deep_sladock block hidden draft-btn align-middle" do %>
+      <%= link_to workspace_draft_path(@workspace),class:"truncate pl-10 pt-2 pb-1 w-full block hover:bg-deep_sladock block draft-btn align-middle" do %>
         <i class="fas fa-pen-square mr-2"></i>
         <%= t(".sidebar.drafts") %>
       <% end %>
