--- a/app/views/shared/_invite_ws.html.erb
+++ b/app/views/shared/_invite_ws.html.erb
@@ -6,12 +6,11 @@
     </div>
     <span class="text-xs text-gray-600">#<%= @workspace.name %></span>
     <%= form_with(model:@invitation,url:workspace_invitations_path(@workspace),id:"invite-form",method: "POST",local: true) do |f| %>
-      <%= f.text_field :receiver_email,placeholder:t(".placeholder"),autocomplete:"off",class:"search relative font-bold px-2 py-2 mb-5 border border-gray-800 rounded block w-full placeholder-gray-600 focus:outline-none focus:shadow-outline" 
+      <%= f.text_field :receiver_email,placeholder:t(".placeholder"),autocomplete:"off",class:"search relative font-bold px-2 py-2 border border-gray-800 rounded block w-full placeholder-gray-600 focus:outline-none focus:shadow-outline" 
       %>
-      <div class="member-group hidden absolute top:0 bg-gray-100 py-2 inset-x-0 mx-5 border border-gray-500 rounded">
-      </div>
+      <span class="text-xs text-gray-400">請輸入email格式(包含 @ 以及 . )</span>
       <div class="text-right">
-        <%= f.submit t(".send"),class:"submit-btn cursor-pointer font-bold text-gray-700 px-5 py-2 mx-2 bg-gray-400 rounded focus:outline-none",disabled: true %>
+        <%= f.submit t(".send"),class:"submit-btn font-bold text-gray-700 px-5 py-2 mx-2 bg-gray-400 rounded focus:outline-none cursor-not-allowed",disabled: true %>
       </div>
     <% end %>
   </div>
