--- a/app/views/shared/_invite_ch.html.erb
+++ b/app/views/shared/_invite_ch.html.erb
@@ -7,9 +7,9 @@
     <span class="text-xs text-gray-600">#<%= @channel.name %></span>
     <%= form_with(url: invite_channel_users_channels_path(@channel.id),method: "POST",local: true) do |f| %>
       <select name="users_channels[name][]" id="user_list" multiple="true" style="width: 100%">
-        <%= options_for_select(@users)%>
+        <%= options_for_select(@users) %>
       </select>
-      <%= f.submit t(".send") ,class:"invite-btn cursor-pointer block font-bold text-gray-700 px-5 py-2 mt-3 ml-auto bg-gray-400 rounded focus:outline-none",disabled: true %>
+      <%= f.submit t(".send") ,class:"invite-btn cursor-not-allowed block font-bold text-gray-700 px-5 py-2 mt-3 ml-auto bg-gray-400 rounded focus:outline-none",disabled: true %>
     <% end %>
     <div class="search-data hidden absolute top:0 bg-gray-100 py-2 inset-x-0 mx-5 border border-gray-500 rounded" >
     </div>
