corrected the ckeditor thread emoji mention bug && corrected actioncable thread bug

--- a/app/views/shared/_right_info.html.erb
+++ b/app/views/shared/_right_info.html.erb
@@ -22,7 +22,7 @@
         有 <%= @thread.children.count %> 則回覆
       </p>
 
-      <div class="children-message" data-target="subscribe.threads">
+      <div class="children-message" data-target="subscribe.threads" message-string="<%= @thread.id %>">
         <% @thread.children.order(:created_at).each do |thread| %>
           <%= render 'threads/message_broadcast', message: thread %>
         <% end %>
