--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -53,11 +53,11 @@
             <% if message.children.count > 0 %>
               <% if message.messageable_type == "Channel" %>
                 <%= link_to channel_message_threads_path(message.messageable_id, message.id), class: "border-solid border-2 border-blue-600 rounded-md px-1 -ml-2" do %>
-                  有 <%= message.children.count %> 則回覆
+                  有 <span class="children-count"><%= message.children.count %></span> 則回覆
                 <% end %>
               <% else %>
-                <%= link_to directmsg_message_threads_path(message.messageable_id, message.id), class: "border-solid border-2 border-blue-600 rounded-md px-1" do %>
-                  有 <%= message.children.count %> 則回覆
+                <%= link_to directmsg_message_threads_path(message.messageable_id, message.id), class: "border-solid border-2 border-blue-600 rounded-md px-1 -ml-2" do %>
+                  有 <span class="children-count"><%= message.children.count %></span> 則回覆
                 <% end %>
               <% end %>
             <% end %>
