--- a/app/javascript/stylesheets/Frontend/shared.scss
+++ b/app/javascript/stylesheets/Frontend/shared.scss
@@ -58,16 +58,28 @@ select{
   }
 }
 
+.wrap{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.nav{
+  flex-grow: 0;
+}
+section{
+  flex-grow: 2;
+}
+
+.section-img{
+  padding-top: 150px;
+}
+
 .footerContent{
   text-align: center;
   font-size: 20px;
   color: #fff;
 }
 
-footer{
-  position: absolute;
-  bottom: 0;
-}
 
 .thread-header{
   position: fixed;
