--- a/public/404.html.erb
+++ b/public/404.html.erb
@@ -23,24 +23,25 @@
     border-right-color: #999;
     border-left-color: #999;
     border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
+    border-top: #EF7A70 solid 4px;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
     background-color: white;
     padding: 7px 12% 0;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+    color: #666666;
   }
 
   .rails-default-error-page h1 {
     font-size: 100%;
-    color: #730E15;
+    color: #EF7A70;
     line-height: 1.5em;
   }
 
   .rails-default-error-page div.dialog > p {
     margin: 0 0 1em;
     padding: 1em;
-    background-color: #F7F7F7;
+    background-color: #EEEEEE;
     border: 1px solid #CCC;
     border-right-color: #999;
     border-left-color: #999;
@@ -51,6 +52,9 @@
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
+  .w-full {
+    width: 100%;
+  }
   </style>
 </head>
 
@@ -58,6 +62,7 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
+      <%= image_pack_tag("media/images/Sladock_logo.png", class: "w-full") %>
       <h1>The page you were looking for doesn't exist.</h1>
       <p>You may have mistyped the address or the page may have moved.</p>
     </div>
