--- a/app/views/shared/_right_info.html.erb
+++ b/app/views/shared/_right_info.html.erb
@@ -16,16 +16,18 @@
         <i class="far fa-times-circle fa-lg"></i>
       </button>
     </div>
-    <div class="thread-all-msg break-all thread-msg overflow-y-auto pb-5">
-      <%= render 'threads/message_broadcast', message: @thread %>
-      <p id="thread-count" data-target="subscribe.threadcount" message_id="<%= @thread.id %>" channel_id="<%= @channel.try(:id) %>" directmsg_id="<%= @directmsg.try(:id) %>" class="flex items-center pl-2 text-gray-600">
-        有 <%= @thread.children.count %> 則回覆
-      </p>
-
-      <div class="children-message" data-target="subscribe.threads" message-string="<%= @thread.id %>">
-        <% @thread.children.order(:created_at).each do |thread| %>
-          <%= render 'threads/message_broadcast', message: thread %>
-        <% end %>
+    <div class="messages_area break-all flex flex-col-reverse overflow-y-auto flex-grow border border-none thread-msg">
+      <div class="thread-all-msg pb-5">
+        <%= render 'threads/message_broadcast', message: @thread %>
+        <p id="thread-count" data-target="subscribe.threadcount" message_id="<%= @thread.id %>" channel_id="<%= @channel.try(:id) %>" directmsg_id="<%= @directmsg.try(:id) %>" class="flex items-center pl-2 text-gray-600">
+          有 <%= @thread.children.count %> 則回覆
+        </p>
+        
+        <div class="children-message" data-target="subscribe.threads" message-string="<%= @thread.id %>">
+          <% @thread.children.order(:created_at).each do |thread| %>
+            <%= render 'threads/message_broadcast', message: thread %>
+          <% end %>
+        </div>
       </div>
     </div>
     <div class="thread-form">
