add notauthorized error rescue

--- a/public/403.html.erb
+++ b/public/403.html.erb
@@ -88,8 +88,8 @@
   <div class="dialog">
     <div>
       <%= image_pack_tag("media/images/Sladock_logo.png", class: "w-full") %>
-      <h1>404</h1>
-      <h2>Page Not Found</h2>
+      <h1>403</h1>
+      <h2>Not Authorized</h2>
       <div class="back-home">
         <%= link_to "Back To Home Page",pages_path , class: "back-btn" %>
       </div>
