--- a/app/javascript/stylesheets/Frontend/shared.scss
+++ b/app/javascript/stylesheets/Frontend/shared.scss
@@ -80,6 +80,64 @@ section{
   color: #fff;
 }
 
+.menu{
+  display: block;
+  cursor: pointer;
+}
+
+@screen sm{
+  .menu {
+    display:none
+  }
+}
+.leftbar {
+  position: fixed;
+  z-index: 300;
+  left: -100%;
+  right: 0;
+  width: 100%;
+  background-color: #128184;
+  transition: left 1.5s;
+}
+.right-content {
+  margin-left: 0;
+  transition: margin-left 0.9s;
+}
+.toggle {
+  .leftbar{
+    left: 0;
+    transition: left .8s;
+  }
+  .right-content {
+  }
+}
+
+@screen sm {
+  .leftbar {
+    position: static;
+    width: 300px;
+    transition: none;
+  }
+  .right-content {
+    transition: none;
+  }
+
+  .toggle {
+    .right-content {
+      margin-left: 0;
+    }
+  }
+}
+
+.close{
+  font-size: 25px;
+}
+
+@screen sm{
+  .close {
+    display:none
+  }
+}
 
 .thread-header{
   position: fixed;
