更新更換S3後的email logo_url

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,7 +1,7 @@
 <section style="width:100%;">
   <div class="mailer-container" style="max-width:500px;margin:0 auto;padding: 0 20px;color:#434245;border: 1px solid #ccc; border-radius:3px;">
-    <img src="https://ckyang01.s3-ap-northeast-1.amazonaws.com/logo/Sladock_logo.png" alt="" style="width: 150px;">
-    <h3 style="font-size: 30px;margin: 10px 0 20px;color:#434245;"><%= t('devise.mailer.confirmation_instructions.confirm') %></h3>
+    <img src="https://rzchen.s3-ap-northeast-1.amazonaws.com/logo/Sladock_logo.png" alt="" style="width: 150px;">
+    <h3 style="font-size: 30px;margin: 10px 0 20px;color:#434245;"><%= t('.confirm') %></h3>
     <div class="text" style="color:#434245;">
       <p style="font-size:18px; font-weight:bold; text-decoration:none;">
         <%= t('devise.mailer.confirmation_instructions.welcome',email: @email) %>
