--- a/app/views/my_mailer/invite.html.erb
+++ b/app/views/my_mailer/invite.html.erb
@@ -1,6 +1,6 @@
   <section style="width:100%;">
   <div class="mailer-container" style="max-width:500px;margin:0 auto;padding: 0 20px;color:#434245;">
-    <img src="https://ckyang01.s3-ap-northeast-1.amazonaws.com/logo/Sladock_logo.png" alt="" style="width: 150px;">
+    <img src="https://rzchen.s3-ap-northeast-1.amazonaws.com/logo/Sladock_logo.png" alt="" style="width: 150px;">
     <h3 style="font-size: 30px; margin: 10px 0 20px; color:#434245;"><%= t('my_mailer.join') %></h3>
     <div class="text" style="color:#434245; font-size:18px;">
       <p>
