--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="chatroom flex">
+<div class="chatroom flex h-screen">
   <%= render "./shared/leftbar", workspace: @workspace, 
                                  channels:  @channels,
                                  unread_msg_bol: @unread_msg_bol,
@@ -6,9 +6,14 @@
                                  channel: @channel || @directmsg %>
     <div class="flex flex-col flex-grow min-w-0 min-h-0">
       <%# 上方白色區塊顯示頻道名稱與邀請按鈕 %>
-      <div class="box-border border-b border-gray-400 h-16 font-bold flex flex-col justify-center pl-3">
-        <%= t('.title') %>
-        <p class="count-draft text-xs text-gray-500"></p>
+      <div class="box-border border-b border-gray-400 flex  items-center h-16 font-bold  pl-3">
+        <div class="menu mx-2">
+          <i class="fas fa-bars"></i>
+        </div>
+        <div>
+          <%= t('.title') %>
+          <p class="count-draft text-xs text-gray-500"></p>
+        </div>
       </div>
       <%# 訊息區 %>
       <div class="draft-area break-all overflow-y-auto h-chat_full flex-grow border border-1 flex justify-center items-center">
