--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -1,4 +1,4 @@
-<div class="leftbar">
+<div class="leftbar min-w-1/5">
   <div class="box-border border-b bg-sladock border-sladock_border h-16 flex justify-between items-center pl-5">
     <h3 class="chatroomName text-white font-bold text-xl current-worksapce" workspace_id="<%= @workspace.id %>"">
       <%= workspace.name %> 
@@ -25,7 +25,7 @@
       </div>
       <% channels.where.not(id: nil).each do |channel| %>
         <div data-controller="channels" data-channels-id="<%= channel.id %>" class='truncate pl-10 py-1 hover:bg-deep_sladock flex pr-5'>
-          <span>#</span>
+          <span class="pr-2">#</span>
           <%= link_to channel.name, workspace_channel_path(workspace, channel), channel_id: channel.id, class: unread_msg_bol[channel.id] ? "font-bold channel-each" : "channel-each", data: { target: "thread.channels" } %>
           <% if channel.users.include?(current_user) %>
             <button data-action="click->channels#removeChannel" data-target="channels.symbol">-</button>
@@ -40,15 +40,15 @@
           <%= t(".channel.direct") %>
         </p>
         <% (workspace.users - [current_user]).each do |user| %>
-          <p class="truncate pl-10 py-1 hover:bg-sladock flex pr-5">
+          <p class="truncate pl-10 py-1 flex pr-5 hover:bg-deep_sladock">
             <%= link_to user.nickname, workspace_directmsg_path(workspace, user.id), class: "d-block mr-auto directmsg-each", user_id: user.id, directmsg_id: Directmsg.create_or_find([current_user, User.find(user.id)], @workspace.id).id %>
             <span class="count text-red-600 w-8 bg-yellow-400 rounded-full text-center hidden" unread-id="<%= user.id %>"><%= unread_msg_count["#{user.id}"] != nil  && unread_msg_count["#{user.id}"] > 0 ? unread_msg_count["#{user.id}"] : nil %></span>
           </p>
         <% end %>
         <%# button顯示 %>
         <p class="invite-ws-btn truncate pl-10 py-1 hover:bg-deep_sladock cursor-pointer">
-          <i class="fas fa-plus text-white-500 mr-1"></i><%= t(".sidebar.invite") %>
-        </p> 
+          <i class="fas fa-plus text-white-500 mr-2"></i><%= t(".sidebar.invite") %>
+        </p>
         <%= render "./shared/invite_ws" %>
       </div>
       <div class="w-full">
@@ -57,7 +57,7 @@
         </p>
         <p class="truncate pl-10 py-1 hover:bg-deep_sladock flex pr-5 mb-2 text-lg">
           <%= link_to webhooks_path do %>
-            <i class="fab fa-github"></i><span class="ml-1">GitHub</span>
+            <i class="fab fa-github mr-2"></i><span>GitHub</span>
           <% end %>
         </p>
       </div>
