--- a/app/views/webhooks/index.html.erb
+++ b/app/views/webhooks/index.html.erb
@@ -27,3 +27,5 @@
 
   <%= link_to "Back to workspace", workspace_channel_path(@back), class: "block text-center bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border-2 border-blue-500 hover:border-transparent rounded" %>
 </div>
+
+<i class="far fa-circle w-10 h-10 text-gray-700 font-bold">123</i>
