--- a/app/javascript/stylesheets/Frontend/shared.scss
+++ b/app/javascript/stylesheets/Frontend/shared.scss
@@ -63,15 +63,96 @@ select{
   display: flex;
   flex-direction: column;
 }
-.nav{
-  flex-grow: 0;
-}
-section{
-  flex-grow: 2;
-}
 
 .section-img{
-  padding-top: 150px;
+  padding-top: 50px;
+  padding-bottom: 30px;
+  pointer-events: none;
+}
+
+
+.feature-img{
+  width: 50%;
+  margin-left: 30px;
+  pointer-events: none;
+}
+.feature-intro {
+  font-size: 25px;
+  justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+.feature-intro ul{
+  margin-left: 30px;
+}
+.feature-intro li{
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+
+}
+.feature-intro p{
+  padding-left: 10px;
+}
+.feature-content{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.checkmark__circle {
+  stroke-dasharray: 166;
+  stroke-dashoffset: 166;
+  stroke-width: 2;
+  stroke-miterlimit: 10;
+  stroke: #128184;
+  fill: none;
+  animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
+
+}
+
+.checkmark {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  stroke-width: 5;
+  stroke: #fff;
+  stroke-miterlimit: 10;
+  margin: 10% auto;
+  box-shadow: inset 0px 0px 0px #128184;
+  animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both;
+
+}
+
+.checkmark__check {
+  transform-origin: 50% 50%;
+  stroke-dasharray: 48;
+  stroke-dashoffset: 48;
+  animation: stroke 1.5s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
+  animation-iteration-count: infinite;
+}
+
+
+@keyframes stroke {
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes scale {
+  0%, 100% {
+    transform: none;
+  }
+  50% {
+    transform: scale3d(1.1, 1.1, 1);
+  }
+}
+
+@keyframes fill {
+  100% {
+    box-shadow: inset 0px 0px 0px 30px #128184;
+  }
 }
 
 .footerContent{
