--- a/app/views/shared/_right_info.html.erb
+++ b/app/views/shared/_right_info.html.erb
@@ -1,5 +1,5 @@
 <%# 右方資訊區 %>
-<div class="info right_info hidden border-l border-gray-400 bg-transparent">
+<div class="info right_info min-w-1/4 hidden border-l border-gray-400 bg-transparent">
   <% if @thread %>
     <div class="box-border border-b border-gray-400 h-16 thread-header">
       <div class="thread-title ml-2">
