index a link adjustment

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -36,7 +36,7 @@
 <div class="feature hidden sm:block">
   <div class="feature-content">
     <div class="feature-img">
-      <%= link_to image_pack_tag("media/images/sladockIndex.png"),pages_path %>
+      <%= image_pack_tag("media/images/sladockIndex.png") %>
     </div>
     <div class="feature-intro">
       <ul>
