index style adjustment

--- a/app/javascript/stylesheets/Frontend/shared.scss
+++ b/app/javascript/stylesheets/Frontend/shared.scss
@@ -63,11 +63,18 @@ select{
   flex-direction: column;
 }
 
-.section-img{
+.section{
   padding-top: 50px;
   padding-bottom: 30px;
 }
-
+.section-img{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.text{
+ margin-left: 150px;
+}
 
 .feature-img{
   width: 50%;
