--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,9 +5,9 @@
     <h1 class="w-full sm:w-1/4">
       <%= link_to image_pack_tag("media/images/Sladock_logo.png"),pages_path %>
     </h1>
-    <div class="w-full sm:w-auto flex flex-col sm:flex-row items-center">
+    <div class="w-full mt-3 sm:w-auto flex flex-col sm:flex-row items-center">
       <% if user_signed_in? %>
-        <span class="indexBtn"><%= link_to 'LAUNCH SLADOCK',workspaces_path%></span>
+        <span class="indexBtn"><%= link_to 'LAUNCH',workspaces_path,class:'block py-2 px-1'%></span>
         <span class="indexBtn signoutBtn"><%= link_to 'SIGN OUT' ,destroy_user_session_path, class:'block py-2' %></span>
       <% else %>
         <span class="indexBtn signinBtn"><%= link_to 'SIGN IN' ,new_user_session_path, class:'block py-2' %></span>
@@ -17,18 +17,16 @@
   </nav>
 </div>
 <%# Section-1 Slack is where work happens %>
-<div class="section section-img bg-orange-100 hidden sm:block"> 
-  <div class="container mx-auto grid grid-cols-5">
-    <div class="col-span-2 flex items-center">
-      <div class="text mr-16">
+<div class="section bg-orange-100 hidden sm:block"> 
+  <div class="container flex justify-around">
+      <div class="text">
         <h3 class="text-6_2xl font-bold leading-tight">SlaDock is where magic happens</h2>
         <p class="text-lg mt-4 mb-8 light_gray">With channels in SlaDock, you and your team can work effectively.</p>
         <div class="btn-group mb-4">
           <button class="bg-sladock text-white rounded "><%= link_to 'GET STRATED' ,workspaces_path, class:'block py-4 px-10' %></button>
         </div>
       </div>
-    </div>
-    <div class="col-span-3 flex items-center ">
+    <div class="section-img">
       <%= link_to image_pack_tag("media/images/indexImg.jpg"),pages_path %>
     </div>
   </div>
