adjust uploadpage heading position

--- a/app/views/uploadedfiles/index.html.erb
+++ b/app/views/uploadedfiles/index.html.erb
@@ -9,7 +9,7 @@
     <div class="flex flex-col flex-grow min-w-0 min-h-0">
       <%# 上方白色區塊顯示頻道名稱與邀請按鈕 %>
       <div class="box-border border-b border-gray-400 h-16 font-bold flex justify-between items-center">
-        <div class="flex items-center">
+        <div class="flex items-center ml-5">
           <div class="menu mx-2">
             <i class="fas fa-bars"></i>
           </div>
